DHCP Server para suportar a resolução e pesquisa de Lease do comando: dhcp-lease-list, adicionando as opções para o
download do arquivo TXT nos scripts: 00-parametros.sh e 02-dhcp.sh. Após análise do BUG: 0014 (Falha de Permissão
Negada) do arquivo: cron.log, aplicação do Path de Correção no script: 01-openssh.log referente ao usuário e grupo
do arquivo que está configurado como: root.root, o correto é: syslog.root.

14/03/2022 - Robson Vaamonde - Várias melhoria nas documentações dos scripts em relação aos comandos utilizados nos
clientes de vários serviços implementados, utilizado a descrição básica do MAN (manuais) dos comandos.

11/03/2022 - Robson Vaamonde - Melhorias nos arquivos de configuração: hosts.allow e hosts.deny, acrescentado mais
informações detalhadas nos Logs: $(date -u) | Serviço Remoto %d | Host Remoto %c | Porta Remota %r | Processo Local %p,
melhoria no arquivo de configuração: dhcpd.conf, acrescentado as opções de mais servidores DNS e alterado o DNS padrão
para o do Firewall pfSense e adicionado os DNS do Google (8.8.8.8 e 8.8.4.4). 

08/03/2022 - Robson Vaamonde - Acréscimo no arquivo: 00-parametros.sh na opção do OpenSSH Server a instalação do
pacote extra: traceroute.

02/03/2022 - Robson Vaamonde - Atualização dos arquivos de instalação: 01-InstalacaoDoUbuntuServer-20.04.3-LTS e 
01-InstalacaoDoUbuntuServer-20.04.4-LTS, acréscimo das explicações para executar mais de uma vez o script no mesmo
servidor no arquivo: HELP.

20/02/2022 - Robson Vaamonde - Alteração das opções do arquivo: php.ini, acrescentado os valores de referência do GLPI
nas linhas: max_execution_time = 600, session.auto_start = Off, session.use_trans_sid = 0, adicionado as opções de 
edição do monitoramento dos serviços: Docker, ElasticSearch, MongoDB, e do Redis Server no script: 13-netada.sh, 
melhoria no script: 00-parametros.sh adicionado a variável: $SENHADEFAULT em vários blocos de configuração, atualizado